Compile with backward compatibility for Java 8